
syntax = "proto3";
import "google/protobuf/empty.proto";
package templates;

message GetTemplateRequest {
  string env  = 1;
  string name = 2;
}

message GetTemplateResponse {
  string yaml = 1;
}

message CompileYamlRequest {
  string env  = 1;
  string name = 2;
}

message CompileYamlResponse {
  string yaml = 1;
}

message SaveTemplateRequest {
  string env  = 1;
  string name = 2;
  string yaml = 3;
}

message DeleteTemplateRequest {
  string env  = 1;
  string name = 2;
}

message TemplateListItem{
  string env                      = 1;
  string name                     = 2;
  string created                  = 3;
  string updated                  = 4;
  int64  last_requests            = 5;
  bool   has_missing_placeholders = 6;
}

message ServerInfoResponse{
  string env_name = 1;
}

service Templates {
  rpc GetServerInfo(google.protobuf.Empty) returns (ServerInfoResponse);
  rpc Get(GetTemplateRequest) returns (GetTemplateResponse);
  rpc GetAll(google.protobuf.Empty) returns (stream TemplateListItem);

  rpc Save(SaveTemplateRequest) returns (google.protobuf.Empty);
  rpc CompileYaml(CompileYamlRequest) returns (CompileYamlResponse);
  rpc Delete(DeleteTemplateRequest) returns (google.protobuf.Empty);
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
}